# geode

./: CMakeLists.txt
cmake/: Platform.cmake  PlatformDetect.cmake
loader/: CMakeLists.txt
loader/core/: CMakeLists.txt
loader/core/include/Geode/: Core.hpp  Loader.hpp  Utils.hpp
loader/core/include/Geode/core/: Macros.hpp  Prelude.hpp
loader/core/include/Geode/loader/: Dirs.hpp  Dispatch.hpp  Hook.hpp  Loader.hpp  Log.hpp  Mod.hpp  ModSettingsManager.hpp  SettingV3.hpp  Tulip.hpp  Types.hpp
loader/core/include/Geode/loader/event/: Event.hpp  IPC.hpp  ModEvent.hpp
loader/core/include/Geode/modify/: Field.hpp  Modify.hpp
loader/core/include/Geode/platform/: Platform.hpp  Windows.hpp
loader/core/include/Geode/utils/: ColorProvider.hpp  JsonValidation.hpp  Task.hpp  VersionInfo.hpp  addresser.hpp  async.hpp  bridge.hpp  casts.hpp  file.hpp  function.hpp  general.hpp  hash.hpp  map.hpp  permission.hpp  ranges.hpp  string.hpp  terminate.hpp  web.hpp
loader/core/src/: load.cpp
loader/core/src/internal/: FileWatcher.hpp  FixModIssues.cpp  FixModIssues.hpp  about.cpp  crashlog.hpp  resources.hpp
loader/core/src/loader/: Dirs.cpp  IPC.cpp  Loader.cpp  LoaderImpl.cpp  LoaderImpl.hpp  Log.cpp  LogImpl.hpp  Mod.cpp  ModEvent.cpp  ModImpl.cpp  ModMetadataImpl.cpp  ModSettingsManager.cpp  SettingV3.cpp  Tulip.cpp  updater.cpp  updater.hpp
loader/core/src/loader/event/: Event.cpp  GameEvent.cpp  IPC.cpp  ModEvent.cpp
loader/core/src/loader/sources/: InstalledModListSource.cpp  ModListSource.cpp  ModSource.hpp  ServerModListSource.cpp
loader/core/src/platform/android/: IPC.cpp  ModImpl.cpp  main.cpp  util.cpp
loader/core/src/platform/ios/: main.mm  util.mm
loader/core/src/platform/mac/: LoaderImpl.mm  ModImpl.cpp  crashlog.mm  main.mm  util.mm
loader/core/src/platform/windows/: FileWatcher.cpp  IPC.cpp  LoaderImpl.cpp  ModImpl.cpp  crashlog.cpp  crashlogWindow.cpp  info.rc.in  main.cpp  nfdwin.cpp  nfdwin.hpp  util.cpp
loader/core/src/platform/windows/cocos/: cocos.cpp
loader/core/src/server/: DownloadManager.cpp  DownloadManager.hpp  Server.cpp  Server.hpp
loader/core/src/utils/: ColorProvider.cpp  JsonValidation.cpp  PlatformID.cpp  addresser.cpp  hash.cpp  sha3.cpp  terminate.cpp  thread.cpp  web.cpp
loader/core/src/utils/fuzzy/: fts_fuzzy_match.h
loader/include/Geode/: Bindings.hpp  Geode.hpp  UI.hpp  Utils.hpp
loader/include/Geode/cocos/2d/: CCNode.h
loader/include/Geode/cocos/3d/: CCBundle3D.h
loader/include/Geode/cocos/audio/include/: SimpleAudioEngine.h
loader/include/Geode/cocos/base/: CCScriptSupport.h  ccTypes.h
loader/include/Geode/cocos/deprecated/: CCString.h
loader/include/Geode/cocos/editor-support/cocostudio/: CCDataReaderHelper.h  CocoLoader.h  DictionaryHelper.h  LocalizationManager.h
loader/include/Geode/cocos/extensions/assets-manager/: AssetsManagerEx.h  Manifest.h
loader/include/Geode/cocos/math/: CCGeometry.h  Mat4.h  Vec2.h  Vec2.inl
loader/include/Geode/cocos/platform/: CCGLView.h  CCPlatformConfig.h  CCPlatformMacros.h
loader/include/Geode/cocos/platform/desktop/: CCGLViewImpl-desktop.h
loader/include/Geode/cocos/platform/win32/: CCApplication-win32.h  CCGL-win32.h  CCPlatformDefine-win32.h
loader/include/Geode/cocos2/robtop/content/: CCContentManager.h
loader/include/Geode/loader/: Log.hpp  Mod.hpp  Setting.hpp  SettingV3.hpp
loader/include/Geode/modify/: Field.hpp  IDManager.hpp  Modify.hpp
loader/include/Geode/platform/: windows.hpp
loader/include/Geode/ui/: Border.hpp  EnterLayerEvent.hpp  General.hpp  Notification.hpp  Popup.hpp  Scrollbar.hpp  SettingNode.hpp  TextArea.hpp  TextInput.hpp
loader/include/Geode/utils/: ColorProvider.hpp  IDManager.hpp  NodeIDs.hpp  addresser.hpp  cocos.hpp  general.hpp
loader/launcher/windows/: CMakeLists.txt  Updater.cpp  proxyLoader.cpp
loader/resources/: mod.json.in
loader/src/cocos2d-ext/: Cocos2d.cpp
loader/src/hooks/: AddExtraKeys.cpp  AddExtraKeys.mm  CompileShaderFix.cpp  DynamicCastFix.cpp  ImpostorPlayLayerFix.cpp  MessageBoxFix.cpp  WindowsFontCacheFix.cpp
loader/src/internal/: FixModIssues.cpp
loader/src/loader/: Dirs.cpp  LoaderImpl.cpp  Log.cpp  ModMetadataImpl.cpp  SettingV3.cpp
loader/src/loader/sources/: ModListSource.hpp  ModPackListSource.cpp  ModSource.cpp
loader/src/platform/mac/: Cocos2d.cpp
loader/src/platform/windows/: crashlog.cpp  main.cpp
loader/src/platform/windows/cocos/: cocos.cpp
loader/src/server/: DownloadManager.cpp  Server.cpp
loader/src/ui/mods/: GeodeStyle.hpp  ModsLayer.cpp
loader/src/ui/mods/list/: ModDeveloperItem.cpp  ModDeveloperList.cpp  ModDeveloperList.hpp  ModItem.cpp  ModItem.hpp  ModList.cpp  ModList.hpp  ModProblemItem.cpp
loader/src/ui/mods/popups/: DevPopup.cpp  ModPopup.cpp
loader/src/ui/mods/settings/: ModSettingsPopup.cpp  SettingNodeV3.cpp  SettingNodeV3.hpp
loader/src/ui/nodes/: General.cpp  ListView.cpp
loader/src/utils/: ColorProvider.cpp  cocos.cpp  general.cpp
loader/src/utils/cocos/: cocos.cpp
